2005-01-23 MINAMI Hirokazu <minami@mistfall.net>

	* tool/mlconfig/mc_im.c: increased MAX_IM_INFO to make room for scim.

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/scim/im_scim.cpp (im_scim_create_context): moved
	be->signal_connect_*() into
	* nputmethod/scim/im_scim.cpp (im_scim_initialize): this.

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	SCIM (Smart Common Input Method platform) support:
	* configure.in:
	  - added '--enable-scim'
	  - added AC_PROG_CXX
	* inputmethod/scim/im_scim.cpp: new file
	* inputmethod/scim/im_scim.h: new file
	* inputmethod/scim/im_scim_mod_if.c: new file
	* inputmethod/scim/Makefile.in: new file

	* inputmethod/uim/im_uim.c, xwindow/x_im.c, xwindow/x_im.h:
	minor code cleanup.

2005-01-23 MINAAMI Hirokazu <minami@mistfall.net>

        Made cursor looks better (thanks to Ian Ward). 
	* mlterm/ml_vt100_parser.c: stopped to unify cursor color.
	* xwindow/x_screen.c, xwindow/x_color_manager.*: cursors are now 
	drawn using the colors of charecters under them.
	
2005-01-21 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c: minor code cleanup.

2005-01-16 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm/ml_pty.c (ml_pty_new): In the forked pty process, reset the
	signal handler for SIGPIPE. (SIG_IGN -> SIG_DFL)

	* configure.in, tool/mlconfig/Makefile.in,
	contrib/tool/mlterm-zoom/Makefile.in: revived DL_SELF (-dlopen self).

2005-01-15 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_term_manager.c (x_term_manager_init): ignore SIGPIPE.
	* inputmethod/uim/im_uim.c: removed a handler for SIGPIPE.

2005-01-13 Seiichi SATO <ssato@sh.rim.or.jp>

	Allow to use static linked IM plugins with libltdl.
	(./configure --disable-shared --enable-static --with-libltdl)

	* configure.in, tool/mlconfig/Makefile.in, xwindow/Makefile.in,
	  contrib/tool/mlterm-zoom/Makefile.in:
	- separated DL_LIBS to DL_LIBS_SB and DL_LIBS_IM.
	- when using libltdl, add "-dlopen /path/to/libim-foo.la" to libtool
	  option.